--- a/src/Login/Login.module.scss
+++ b/src/Login/Login.module.scss
@@ -7,6 +7,7 @@ $med-font: 1.5rem;
 	align-items: center;
 	flex-direction: column;
 	min-height: 100vmin;
+	height: 100%;
 	background: #333;
 	color: #fff;
 	font-weight: 900;
