--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,20 @@ h6 {
 	margin: 0;
 }
 
+main {
+	flex: 1;
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
 body,
 html {
 	background: #f4f4f4;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
