--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -8,11 +8,22 @@ h6 {
 	margin: 0;
 }
 
+main {
+	flex: 1;
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
 body,
 html {
 	background: #f4f4f4;
 	margin: 0;
 	padding: 0;
+	height: 100%;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
 		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 		'Helvetica Neue', sans-serif;
